# BED-simulation-detecting-interaction

./: 00_create_underlying_truth.py  01_SVI.py  01_SVI_OD.py  02_merge_files.py  03_plotting.py  README.md  config.py  functions.py  plotting_functions.py  prior_visualization.py  pyproject.toml  python_residuals_evaluation.sh
